--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="dev.emmaguy.holotestapp"
     android:versionCode="1"
@@ -11,7 +12,25 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/Theme.Light"
+        android:name="org.holoeverywhere.app.Application">
+        <activity
+            android:name="dev.emmaguy.holotestapp.MainActivity"
+            android:label="@string/title_activity_main" >
+            <intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="dev.emmaguy.holotestapp.BackActivity"
+            android:label="@string/title_activity_back"
+            android:parentActivityName="dev.emmaguy.holotestapp.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="dev.emmaguy.holotestapp.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
